# replay

./: README.md
deepeyes/amd_eval_scripts/: hrbench4k.sh  hrbench8k.sh  hrbench8k_replay_dev.sh  replay_iv_hrbench4k.sh  replay_iv_hrbench8k.sh  replay_iv_visualprobehard.sh  replay_iv_visualprobemedium.sh  visualprobe_easy.sh  visualprobe_hard.sh  visualprobe_medium.sh
deepeyes/eval/: eval_hr4k_transformers.py  eval_hr8k_transformers.py  eval_visualprobe_easy_transformers.py  eval_visualprobe_hard_transformers.py  eval_visualprobe_medium_transformers.py  eval_vstar_transformers_251006_2146.py
deepeyes/eval_scripts/: acc.sh  hr4k.sh  hr8k.sh  parse_hr4k.sh  parse_visualprobe.sh  parse_vstar.sh  vstar.sh
deepeyes/eval_scripts/replay/: eval_hr4k.sh  eval_hr8k.sh  eval_visualprobehard.sh  eval_visualprobemedium.sh
deepeyes/replay_eval/: eval_hr4k.py  eval_hr8k.py  eval_visualprobehard.py  eval_visualprobemedium.py
deepeyes/scripts/: install_deepeyes.sh
video_r1/: pyproject.toml  requirements.txt  setup.sh
video_r1/eval_scripts/: acc.sh
video_r1/eval_scripts/replay/: eval_mlvu.sh  eval_mmvu.sh  eval_videoholmes.sh  eval_videommmu.sh
video_r1/replay_eval/: data_config.py  eval_mlvu.py  eval_mmvu.py  eval_videoholmes.py  eval_videommmu.py
video_r1/replay_eval/jsons/: mmvu_val.json
video_r1/replay_eval/jsons/mlvu/: 2_needle.json  3_ego.json
video_r1/replay_eval/jsons/videommmu/: Adaptation.json  Comprehension.json  Perception.json
vlmevalkit/: pyproject.toml  requirements.txt  run.py  setup.sh
vlmevalkit/vlmeval/: config.py  inference.py  inference_mt.py  inference_video.py
vlmevalkit/vlmeval/vlm/: __init__.py  globalsmooth_qwen2_vl.py  localsmooth_qwen2_vl.py  midreplay_qwen2_vl.py  replay_qwen2_vl.py  reversereplay_qwen2_vl.py
vlmevalkit/vlmeval/vlm/qwen2_vl/: model.py
