[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpy-vlmevalkit"
version = "0.1.0"
description = "UV-managed .venv for VLMEvalKit; flash-attention not included."
readme = "README.md"
# Match setup.sh (--python 3.10). A wider range makes uv resolve for 3.11/3.12 too, which can
# fail on partial indexes / mirrors (e.g. omegaconf) even though the venv is only 3.10.
requires-python = ">=3.10,<3.11"
dependencies = [
  "accelerate",
  "anls>=0.0.2",
  "antlr4-python3-runtime==4.11.1",
  "apted>=1.0.3",
  "bert-score",
  "cairosvg",
  "colormath>=3.0.0",
  "datasets",
  "decord>=0.6.0",
  "distance>=0.1.3",
  "editdistance>=0.8.1",
  "einops",
  "google-genai",
  "gradio",
  "huggingface_hub",
  "imageio",
  "ipdb",
  "jieba>=0.42.1",
  "json_repair",
  "levenshtein>=0.27.1",
  "lpips",
  "lxml>=6.0.2",
  "math-verify",
  "matplotlib",
  "nltk",
  "numpy",
  "omegaconf>=2.4.0.dev4",
  "openai",
  "openai-clip",
  "opencv-python-headless>=4.7.0.72",
  "openpyxl",
  "pandas",
  "pdf2image>=1.17.0",
  "pillow",
  "polygon3>=3.0.9.1",
  "portalocker",
  "protobuf",
  "pylatexenc==2.10",
  "python-dotenv",
  "qwen-vl-utils",
  "requests",
  "rich",
  "scikit-image",
  "scikit-learn",
  "sentence-transformers",
  "sentencepiece",
  "setuptools",
  "sty",
  "sympy",
  "tabulate",
  "tiktoken",
  "timeout-decorator",
  "timm",
  "torch==2.6.0",
  "torchaudio==2.6.0",
  "torchmetrics",
  "torchvision==0.21.0",
  "tqdm",
  "transformers>=4.57.1,<4.58",
  "typing_extensions",
  "validators",
  "xlsxwriter",
  "zss>=1.2.0",
]

[project.scripts]
vlmutil = "vlmeval:cli"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "paper_test*"]

# omegaconf>=2.4.0.dev4 is a pre-release lower bound; "if-necessary" may still block resolution.
[tool.uv]
prerelease = "allow"

# CUDA 12.4 wheels (same as: pip install torch==... --index-url https://download.pytorch.org/whl/cu124)
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
